<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".card.CardFragment"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/rave_topLay"
                android:paddingTop="10dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/rave_amountTil"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:id="@+id/rave_amountTV"
                        android:inputType="numberDecimal"
                        android:layout_below="@+id/rave_card1"
                        android:layout_marginBottom="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/rave_emailTil"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:id="@+id/rave_emailTv"
                        android:inputType="textEmailAddress"
                        android:layout_below="@+id/rave_card1"
                        android:layout_marginBottom="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/rave_cardNoTil"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">

                    <com.flutterwave.raveandroid.card.CreditCardView
                        android:hint="@string/card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rave_cardNoTv"
                        android:layout_gravity="center"/>

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rave_cvvExpLay"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/rave_cardExpiryTil"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/expiration"
                            android:paddingRight="50dp"
                            android:paddingEnd="50dp"
                            android:id="@+id/rave_cardExpiryTv"
                            android:inputType="number"
                            android:maxLength="5"
                            android:layout_below="@+id/rave_card1"
                            android:layout_marginBottom="10dp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/rave_cvvTil"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cvc_cvv2"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:id="@+id/rave_cvvTv"
                            android:imeOptions="actionDone"
                            android:layout_below="@+id/rave_card1"
                            android:layout_marginBottom="10dp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/save_card"
                    android:id="@+id/rave_saveCardSwitch"
                    />
                <FrameLayout
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    style="?attr/buttonStyleSmall"
                    android:background="@drawable/curve_blue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:id="@+id/rave_payButton"
                    >

                    <TextView
                        android:id="@+id/pay_tv"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PAY"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        fontPath = "fonts/NirmalaB.ttf"
                        />


                </FrameLayout>




                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_saved_card"
                    android:id="@+id/rave_savedCardButton"
                    style="?SavedCardButtonStyle"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="35dp"
                    android:layout_marginLeft="10dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/powered_by"
                    android:src="@drawable/ic_visa1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:drawablePadding="5dp"
                    android:id="@+id/rave_pcidss_compliant_tv"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:layout_gravity="center"
                    android:text="@string/pci_dss_compliant"/>


            </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

